tests/snapshots/examples_fixtures/type_system__failing__20_direct_builtin_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/20_direct_builtin_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `print` requires effect `IO` in this function signature.

  --> examples/type_system/failing/20_direct_builtin_missing_effect.flx:6:5
  |
6 |     print("tick")
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Time).

  --> examples/type_system/failing/20_direct_builtin_missing_effect.flx:10:1
   |
10 | tick()
   | ^^^^^^
   | ------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/failing/20_direct_builtin_missing_effect.flx:10:1
   |
10 | tick()
   | ^^^^^^
   | ------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
